[package]
name = "ai_agent_client"
version = "0.1.0"
edition = "2024"

[dependencies]
rig = "0.1.0"         # Or latest version
tokio = { version = "1", features = ["full"] }
clap = "4"
dialoguer = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
