[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
